yarte/tests/fails/not-exist-assign.stderr
error: proc-macro derive panicked
 --> $DIR/not-exist-assign.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = help: message: error
           --> $DIR/Test.hbs:2:5
            |
          2 |     no_exist = 0;
            |     ^^^^^^^^ Not exist in current scope
            |
